Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119693

[REG] 6.7.0 namespace build fails on Windows (MSVC&MinGW), multimedia

XMLWordPrintable

    • Windows
    • 2cf809daf (dev), 75c9a5db8 (6.6), b5b6f83b5 (tqtc/lts-6.5)

      Have Qt sources (sha1 024d2f039dbece104df2123e77f375f148dac991), configure namespace build:

      cmake -DCMAKE_C_COMPILER=cl.exe -DCMAKE_CXX_COMPILER=cl.exe -GNinja -DCMAKE_BUILD_TYPE=Release -DQT_BUILD_EXAMPLES=OFF -DOPENSSL_ROOT_DIR=C:\openssl\include\.. -DINPUT_system_zlib=no -DPostgreSQL_ROOT=C:\Utils\postgresql\pgsql\lib\.. -DQT_BUILD_TESTS=OFF -DCMAKE_MESSAGE_LOG_LEVEL=STATUS -DQT_NAMESPACE=RTA C:\Users\qt\RTA\src-6.7.0 -DCMAKE_INSTALL_PREFIX:PATH=C:\Users\qt\RTA\src-6.7.0\qtbase 

      Finishes fine, build: cmake --build . --parallel, fails:

      [6716/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfactivate.cpp.obj
      FAILED: qtmultimedia/src/plugins/multimedia/windows/CMakeFiles/QWindowsMediaPlugin.dir/player/mfactivate.cpp.obj 
      C:\PROGRA~2\MICROS~2\2019\PROFES~1\VC\Tools\MSVC\1429~1.301\bin\Hostx64\x64\cl.exe  /nologo /TP -DNOMINMAX -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x040800 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MULTIMEDIA_LIB -DQT_NAMESPACE=RTA -DQT_NETWORK_LIB -DQT_NO_AS_CONST -DQT_NO_AS_CONST=1 -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_PLUGIN -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQWindowsMediaPlugin_EXPORTS -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\QWindowsMediaPlugin_autogen\include -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows -IC:\Users\qt\RTA\src-6.7.0\qtbase\include -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\audio -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\common -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\decoder -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\evr -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\mediacapture -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\multimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia\6.7.0\QtMultimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\src\corelib -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore\6.7.0\QtCore -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore -IC:\Users\qt\RTA\src-6.7.0\qtbase\mkspecs\win32-msvc -IC:\Users\qt\RTA\src-6.7.0\qtbase\src\gui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui\6.7.0\QtGui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtNetwork -external:IC:\VulkanSDK\1.2.182.0\Include -external:W0 /DWIN32 /D_WINDOWS /DNDEBUG        -O2 -Ob3 -O2 -Ob3 -std:c++17 -MD /W3 /EHs-c- /wd4530 /wd4577 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw /showIncludes /Foqtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfactivate.cpp.obj /Fdqtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\ /FS -c C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate.cpp
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C3856: 'QComObjectTraits': symbol is not a class template
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2146: syntax error: missing ';' before identifier 'IMFActivate'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2913: explicit specialization; 'QtPrivate::QComObjectTraits' is not a specialization of a class template
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2059: syntax error: '>'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(25): error C2143: syntax error: missing ';' before '{'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(25): error C2447: '{': missing function header (old-style formal list?)
      [6717/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\mfstream.cpp.obj
      [6718/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\evr\evrvideowindowcontrol.cpp.obj
      [6719/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\decoder\mfdecodersourcereader.cpp.obj
      [6720/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\evr\evrhelpers.cpp.obj
      [6721/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\samplegrabber.cpp.obj
      [6722/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfevrvideowindowcontrol.cpp.obj
      [6723/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\common\mfmetadata.cpp.obj
      [6724/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\decoder\mfaudiodecodercontrol.cpp.obj
      [6725/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfplayercontrol.cpp.obj
      [6726/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\mediacapture\qwindowscamera.cpp.obj
      [6727/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mftvideo.cpp.obj
      [6728/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfvideorenderercontrol.cpp.obj
      FAILED: qtmultimedia/src/plugins/multimedia/windows/CMakeFiles/QWindowsMediaPlugin.dir/player/mfvideorenderercontrol.cpp.obj 
      C:\PROGRA~2\MICROS~2\2019\PROFES~1\VC\Tools\MSVC\1429~1.301\bin\Hostx64\x64\cl.exe  /nologo /TP -DNOMINMAX -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_UP_TO=0x040800 -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MULTIMEDIA_LIB -DQT_NAMESPACE=RTA -DQT_NETWORK_LIB -DQT_NO_AS_CONST -DQT_NO_AS_CONST=1 -DQT_NO_CONTEXTLESS_CONNECT=1 -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QEXCHANGE -DQT_PLUGIN -DQT_USE_QSTRINGBUILDER -DQT_WARN_DEPRECATED_UP_TO=0x070000 -DQWindowsMediaPlugin_EXPORTS -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\QWindowsMediaPlugin_autogen\include -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows -IC:\Users\qt\RTA\src-6.7.0\qtbase\include -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\audio -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\common -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\decoder -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\evr -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\mediacapture -IC:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\multimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia\6.7.0\QtMultimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\src\corelib -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore\6.7.0\QtCore -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtCore -IC:\Users\qt\RTA\src-6.7.0\qtbase\mkspecs\win32-msvc -IC:\Users\qt\RTA\src-6.7.0\qtbase\src\gui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui\6.7.0 -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui\6.7.0\QtGui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtGui -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtMultimedia -IC:\Users\qt\RTA\src-6.7.0\qtbase\include\QtNetwork -external:IC:\VulkanSDK\1.2.182.0\Include -external:W0 /DWIN32 /D_WINDOWS /DNDEBUG        -O2 -Ob3 -O2 -Ob3 -std:c++17 -MD /W3 /EHs-c- /wd4530 /wd4577 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:ternary -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw /showIncludes /Foqtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfvideorenderercontrol.cpp.obj /Fdqtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\ /FS -c C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfvideorenderercontrol.cpp
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C3856: 'QComObjectTraits': symbol is not a class template
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2146: syntax error: missing ';' before identifier 'IMFActivate'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2913: explicit specialization; 'QtPrivate::QComObjectTraits' is not a specialization of a class template
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(24): error C2059: syntax error: '>'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(25): error C2143: syntax error: missing ';' before '{'
      C:\Users\qt\RTA\src-6.7.0\qtmultimedia\src\plugins\multimedia\windows\player\mfactivate_p.h(25): error C2447: '{': missing function header (old-style formal list?)
      [6729/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\evr\evrcustompresenter.cpp.obj
      [6730/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\evr\evrd3dpresentengine.cpp.obj
      [6731/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\mediacapture\qwindowsimagecapture.cpp.obj
      [6732/12044] Building CXX object qtquick3d\src\quick3d\CMakeFiles\Quick3D.dir\quick3d_qmltyperegistrations.cpp.obj
      [6733/12044] Building CXX object qtmultimedia\src\plugins\multimedia\windows\CMakeFiles\QWindowsMediaPlugin.dir\player\mfplayersession.cpp.obj
      ninja: build stopped: subcommand failed. 

      Fails on MSVC2019 x64 and MinGW x64 builds. Linux and macOS builds are working correctly.

      Last time build was passing on Windows was with sha1 cd06971dd3e362d00466363589082bebe2027a58

       

        For Gerrit Dashboard: QTBUG-119693
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes