Fix QtMultimedia namespace build

The QtMultimedia Windows backend was missing QT_BEGIN_NAMESPACE/
QT_END_NAMESPACE in one of its files. This caused namespace build to
fail.

This patch adds the missing namespace macros and fixes the namespace
build.

Fixes: QTBUG-119693
Change-Id: Iabb67b6e3713c41030332ac289977a5999137e60
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 2cf809dafc189f8ecd23408e27da86bca88731e8)
(cherry picked from commit 75c9a5db8801f9a4e04967093ac83187dd44a2e5)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>